[package]
name = "hypcmp"
version = "0.2.1"
edition = "2021"
description = "Comparison tool to run hyperfine benchmarks with toml file support"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hypcmp"

[dependencies]
toml = "0.5.*"
tempfile = "3.*"
serde = { version = "1.*", features = ["derive"] }
clap = { version = "3.*", features = ["derive"] }
serde_json = "1.*"
log = "0.4.*"
env_logger = "0.9.*"