[package]
name = "hypcmp"
version = "0.3.1"
authors =  ["Ugur Cayoglu <cayoglu@me.com>"]
edition = "2021"
description = "Extension to run hyperfine with toml files w/ commit switches."
documentation = "https://docs.rs/hypcmp"
repository = "https://github.com/sqsh-project/hypcmp"
license = "MIT OR Apache-2.0"
keywords = ["benchmarks", "toml", "hyperfine", "performance", "profiling"]
categories = ["development-tools::profiling"]

[dependencies]
toml = "0.5.*"
tempfile = "3.*"
serde = { version = "1.*", features = ["derive"] }
clap = { version = "3.*", features = ["derive"] }
serde_json = "1.*"
log = "0.4.*"
env_logger = "0.9.*"
clap-verbosity-flag = "1.0.*"
